--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -787,20 +787,20 @@
     "    #       然后得到对前300个训练数据的预测结果\n",
     "    start = time() # 获得程序开始时间\n",
     "    predictions_val = learner.predict(X_val)\n",
-    "    predictions_train = learner.predict(X_train[1:300])\n",
+    "    predictions_train = learner.predict(X_train[:300])\n",
     "    end = time() # 获得程序结束时间\n",
     "    \n",
     "    # TODO：计算预测用时\n",
     "    results['pred_time'] = end - start\n",
     "            \n",
     "    # TODO：计算在最前面的300个训练数据的准确率\n",
-    "    results['acc_train'] = accuracy_score(y_train[1:300], predictions_train)\n",
+    "    results['acc_train'] = accuracy_score(y_train[:300], predictions_train)\n",
     "        \n",
     "    # TODO：计算在验证上的准确率\n",
     "    results['acc_val'] = accuracy_score(y_val, predictions_val)\n",
     "    \n",
     "    # TODO：计算在最前面300个训练数据上的F-score\n",
-    "    results['f_train'] = fbeta_score(y_train[1:300], predictions_train, beta = 0.5)\n",
+    "    results['f_train'] = fbeta_score(y_train[:300], predictions_train, beta = 0.5)\n",
     "        \n",
     "    # TODO：计算验证集上的F-score\n",
     "    results['f_val'] = fbeta_score(y_val, predictions_val, beta = 0.5)\n",
@@ -936,7 +936,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**回答： ** Logistic回归通常都是用来解决二分类问题的，也可以用来进行多分类。其主要解决的是线性问题，针对该问题训练时，输入训练数据，每一条数据通过加权求和带入sigmoid函数，一个输入在[$-\\infty, \\infty$]，输出在[0,1]之间的S型函数，得到预测结果。因此预测值与真实值之间就存在一定的误差，通过调整不同特征的权重后，是该误差减小，直至不变，训练过程就完成了。\n",
+    "**回答： ** Logistic回归通常都是用来解决二分类问题的，也可以用来进行多分类。其主要解决的是线性问题，针对该问题训练时，输入训练数据，每一条数据通过加权求和带入sigmoid函数，一个输入在[$-\\infty, \\infty$]，输出在[0,1]之间的S型函数，得到预测结果。因此预测值与真实值之间就存在一定的误差，通过随机梯度下降算法，更新不同特征的权重，使该误差减小，直至不变，训练过程就完成了。\n",
     "\n",
     "针对该问题预测时，输入一条数据，一共有103个特征，传入模型后，通过线性的加权求和后带入sigmoid函数。因此，输出的结果就是一个概率，来判断年收入是否大于\\$50,000，输出大于0.5，则该调查者年收入大于\\$50,000；反之。"
    ]
@@ -1038,7 +1038,7 @@
     "| 评价指标         | 天真预测器           | 未优化的模型        | 优化的模型        |\n",
     "| :------------: | :-----------------: | :---------------: | :-------------: | \n",
     "| 准确率          |     0.2478                |    0.8536               |      0.8542           |\n",
-    "| F-score        |      0.3599               |    0.7182             |       0.7182          |"
+    "| F-score        |      0.2917               |    0.7182             |       0.7182          |"
    ]
   },
   {
@@ -1078,7 +1078,7 @@
     "- 特征1:workclass（劳动类型）。通常一个人的职业跟他的收入有很大的关系，比如说公务员，或者是从来没有工作的人，他的收入通常是不会超过\\$50,000的。\n",
     "- 特征2:education_level（受教育程度）。通常情况下，高学历人群的工资水平要高于低学历的人人群。\n",
     "- 特征3:occupation（职业领域）。职业领域不同，工资水平，通常会有很大的区别，比如说IT和金融从业人员的工资水平会比较高。\n",
-    "- 特征4:relationship（家庭情况）。如果是是有孩子的家庭，通常会更有爱心和同情心一些。\n",
+    "- 特征4:年龄（家庭情况）。通常年龄跟收入有很大的关系，通常情况下，随着年龄的增长收入会增多，最终趋于稳定。\n",
     "- 特征5:sex（性别）。通常情况下，女性的收入要低于男性，因为女性有一部分精力在孩子和家庭身上，因此更多的机会留给了男性。"
    ]
   },
